<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".fragments.ShelterInformationFragment">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shelter_main_title"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.257"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037" />

        <View
            android:id="@+id/view"
            android:layout_width="311dp"
            android:layout_height="620dp"
            android:background="@drawable/background_div"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="82dp"
            android:text="@string/shelter_name"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="131dp"
            android:background="@drawable/input_radius"
            android:padding="5dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/nameTitle" />

        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="82dp"
            android:text="@string/registration_phone"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="131dp"
            android:background="@drawable/input_radius"
            android:padding="5dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/phoneTitle" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="82dp"
            android:text="@string/registration_email"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/phoneText" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="131dp"
            android:background="@drawable/input_radius"
            android:padding="5dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/emailTitle" />

        <TextView
            android:id="@+id/urlText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="131dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="131dp"
            android:background="@drawable/input_radius"
            android:padding="5dp"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/urlTitle" />

        <TextView
            android:id="@+id/urlTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="82dp"
            android:text="@string/shelter_url"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />
</androidx.constraintlayout.widget.ConstraintLayout>